--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "vue-loader": "^13.0.5",
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.4.4",
+    "vue2-animate": "^2.0.0",
     "vuex": "^3.0.1",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
