--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "never-say-the-last-number",
-  "description": "A interesting game. yes it's interesting. XD",
+  "description": "An interesting game. yes it's interesting. XD",
   "version": "1.0.0",
   "author": "qwqcode <1149527164@qq.com>",
   "license": "UNLICENSED",
